1897910 blog post and landing: fix landing page teaser spacing issue

--- a/sites/all/themes/bootsass/stylesheets/styles.css
+++ b/sites/all/themes/bootsass/stylesheets/styles.css
@@ -9514,31 +9514,32 @@ a.external-link:hover span.glyphicon {
   width: calc(100% - 20px);
   width: -moz-calc(100% - 20px);
   border-bottom: 1px solid #c8cdd0;
-  margin: 20px auto 0;
+  margin: 0 auto;
+  padding-top: 20px;
 }
-/* line 67, ../sass/custom/_landing.scss */
+/* line 68, ../sass/custom/_landing.scss */
 .main-content .node-teaser .image {
   margin-top: 5px;
 }
 
 /* LANDING LISTS */
-/* line 76, ../sass/custom/_landing.scss */
+/* line 77, ../sass/custom/_landing.scss */
 .front .landing-list .node-teaser:after {
   display: none;
 }
-/* line 80, ../sass/custom/_landing.scss */
+/* line 81, ../sass/custom/_landing.scss */
 .landing-list .image {
   margin-top: 5px;
 }
-/* line 83, ../sass/custom/_landing.scss */
+/* line 84, ../sass/custom/_landing.scss */
 .landing-list .tags {
   padding-top: 5px;
 }
-/* line 86, ../sass/custom/_landing.scss */
+/* line 87, ../sass/custom/_landing.scss */
 .landing-list h2.teaser-title {
   margin-top: 0;
 }
-/* line 90, ../sass/custom/_landing.scss */
+/* line 91, ../sass/custom/_landing.scss */
 .landing-list .view-footer span.glyphicon {
   width: 22px;
   height: 22px;
@@ -9547,55 +9548,55 @@ a.external-link:hover span.glyphicon {
   line-height: 22px;
 }
 
-/* line 97, ../sass/custom/_landing.scss */
+/* line 98, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 {
   background-color: #e4ebee;
 }
-/* line 99, ../sass/custom/_landing.scss */
+/* line 100, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .node-teaser {
   padding: 0;
 }
-/* line 101, ../sass/custom/_landing.scss */
+/* line 102, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .node-teaser:after {
   display: none;
 }
-/* line 106, ../sass/custom/_landing.scss */
+/* line 107, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .group-right:before {
   display: block;
   content: "Today's Article";
 }
-/* line 111, ../sass/custom/_landing.scss */
+/* line 112, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .image {
   margin-top: 0;
 }
-/* line 114, ../sass/custom/_landing.scss */
+/* line 115, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .tags {
   margin-top: 0;
   padding: 10px;
   background-color: #38709e;
   color: white;
 }
-/* line 119, ../sass/custom/_landing.scss */
+/* line 120, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .tags a {
   color: white;
 }
-/* line 123, ../sass/custom/_landing.scss */
+/* line 124, ../sass/custom/_landing.scss */
 .page-taxonomy-term-147 .landing-list .views-row-1 .group-right {
   padding: 20px 10px;
 }
 
 /* LANDING PAGE */
-/* line 132, ../sass/custom/_landing.scss */
+/* line 133, ../sass/custom/_landing.scss */
 .node-landing-page.view-mode-full h2.teaser-title {
   margin-top: 6px;
 }
-/* line 135, ../sass/custom/_landing.scss */
+/* line 136, ../sass/custom/_landing.scss */
 .node-landing-page.view-mode-full .sub-heading {
   margin-top: 0;
 }
 
 /* LANDING LIBRARY PAGE */
-/* line 152, ../sass/custom/_landing.scss */
+/* line 153, ../sass/custom/_landing.scss */
 .latest-library-content.outset, .latest-library-content.resource-item.odd, .latest-library-content.group-footnotes {
   margin-left: -10px;
   margin-right: -10px;
@@ -9603,7 +9604,7 @@ a.external-link:hover span.glyphicon {
 }
 
 /* AUSTRIAN ECONOMICS LANDING PAGE */
-/* line 160, ../sass/custom/_landing.scss */
+/* line 161, ../sass/custom/_landing.scss */
 .austrian-econ-block img {
   border: 3px solid #788086;
 }
